# advent-of-code

./: .gitignore  LICENSE  README.md  pytest.ini  scratchpad.md  tsconfig.base.json
2024/: .gitignore  README.md  print_cte_steps.py  pyproject.toml  run-all.sh  run.sh
2024/day-01_historian-hysteria/: README.md  solution.py  solution.sql  solution_test.py
2024/day-02_red-nosed-reports/: solution.sql
2024/day-03_mull-it-over/: regex_bad.sql  solution.sql
2024/day-04_ceres-search/: README.md  solution.original.sql  solution.py  solution.sql  solution_test.py
2024/day-05_print-queue/: solution.sql
2024/day-06_guard-gallivant/: README.md  solution.py  solution.sql  solution_test.py  sql-profiler_part1_naive.txt  sql-profiler_part1_raywalking-case.txt  sql-profiler_part2_precalculated-steps.txt  sql-profiler_part2_raywalking.txt
2024/day-07_bridge-repair/: README.md  profiler  solution.original.sql  solution.py  solution.sql  solution_test.py
2024/day-08_resonant-collinearity/: solution.sql
2024/day-09_disk-fragmenter/: profiler  solution.original.sql  solution.sql
2024/day-10_hoof-it/: solution.sql
2024/day-11_plutonian-pebbles/: blinkomat-full.dot  blinkomat-single.dot  blinkomat.dot  solution.sql
2024/day-12_garden-groups/: solution.py  solution.sql
2024/day-13_claw-contraption/: solution.sql
2024/day-14_restroom-redoubt/: solution.sql
2024/day-15_warehouse-woes/: solution.sql
2024/day-16_reindeer-maze/: solution.sql
2024/day-17_chronospatial-computer/: solution.sql
2025/: .gitignore  pyproject.toml
quack/: foo.sql  pyproject.toml
(+183 files in other folders)
