[tool.poetry]
name = "quack"
description = "Some tooling for SQL/DuckDB"
version = "0.1.0"
authors = []

[tool.poetry.dependencies]
python = "^3.12"
sqlglot = "^26.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-check = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
